・いいねボタン押下による 　・「FAVORITE」の登録 　・「POST」のいいねカウント数のインクリメント ・一覧表示時に、いいねカウント数を表示 ・JSONの「POST」に、いいねカウント数（POST_FAV_CNT）を追加 ・JSONの初期データの投稿時刻に秒数を追加

--- a/html/index.html
+++ b/html/index.html
@@ -15,9 +15,10 @@
       <div id="postAll" v-for="tweet in tweets">
         <p>{{ tweet.post_user_id }} {{ tweet.post_datetime }}</p>
         <p>{{ tweet.post_text }}</p>
-        <button v-on:click="createFavorite(n)">いいね</button>
+        <button v-on:click="createFavorite(tweet.post_id)">いいね</button>
+        {{ tweet.post_fav_cnt }}
       </div>
-      <!-- <p>{{ $data }}</p> -->
+      <p>{{ $data }}</p>
     </div>
     <script src="https:/unpkg.com/vue@3.1.5"></script>
     <script src="../js/main.js"></script>
