不要コードのコメント化、コメント追加

--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
         <button v-on:click="createFavorite(tweet.post_id)">いいね</button>
         {{ tweet.post_fav_cnt }}
       </div>
-      <p>{{ $data }}</p>
+      <!-- <p>{{ $data }}</p> -->
     </div>
     <script src="https:/unpkg.com/vue@3.1.5"></script>
     <script src="../js/main.js"></script>
