--- a/html/twitCreate.html
+++ b/html/twitCreate.html
@@ -19,6 +19,8 @@
             {{ message }}
         </div>
         <button v-on:click="onClick()" type="submit" id="submit">ツイート</button>
+        <br>
+        <a href="index.html">一覧に戻る</a>
     </div>
 
     
