--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
         <br>
         <a :href=thread.threadUrl>返信</a>
       </div>
-    {{$data}}
+<!--     {{$data}} -->
     </div>
     <script src="https:/unpkg.com/vue@3.1.5"></script>
     <script src="../js/main.js"></script>
