--- a/html/index.html
+++ b/html/index.html
@@ -30,24 +30,28 @@
     <hr>
 
     <div id="app">
-      <div id="thread" v-for="thread in threads">
-        <div id="post" v-for=" tweet in thread.tweets">
-          <p>{{ tweet.post_user_id }} {{ tweet.post_datetime }}</p>
-          <p v-if=!(tweet.is_edit_mode)>
-            {{ tweet.post_text }}
-            <button v-on:click="changeMode(tweet.soeji)">編集</button>
-          </p>
-          <p v-else>
-            <textarea id="edittext" rows="6" v-model="tweet.post_text"></textarea>
-            <span id="error">{{ tweet.message }}</span>
-            <button v-on:click="updateText(tweet.soeji)">保存</button>
-            <button v-on:click="quitEdit(tweet.soeji)">キャンセル</button>
-          </p>
-          <button v-on:click="createFavorite(tweet.soeji)">いいね</button>
-          {{ tweet.post_fav_cnt }}
+      <div v-for="thread in threads">
+        <div id="thread">
+          <div id="post" v-for=" tweet in thread.tweets">
+            <p>{{ tweet.post_user_id }} {{ tweet.post_datetime }}</p>
+            <p v-if=!(tweet.is_edit_mode)>
+              {{ tweet.post_text }}
+              <button v-on:click="changeMode(tweet.soeji)">編集</button>
+            </p>
+            <p v-else>
+              <textarea id="edittext" rows="6" v-model="tweet.post_text"></textarea>
+              <br>
+              <span id="error">{{ tweet.message }}</span>
+              <button v-on:click="updateText(tweet.soeji)">保存</button>
+              <button v-on:click="quitEdit(tweet.soeji)">キャンセル</button>
+            </p>
+            <button v-on:click="createFavorite(tweet.soeji)">いいね</button>
+            {{ tweet.post_fav_cnt }}
+          </div>
+          <br>
+          <a :href=thread.threadUrl>返信</a>
         </div>
         <br>
-        <a :href=thread.threadUrl>返信</a>
       </div>
     </div>
     <script src="https:/unpkg.com/vue@3.1.5"></script>
